--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,17 @@
 {
+    "version": 2,
+    "builds": [
+        {
+            "src": "./index.js",
+            "use": "@vercel/node"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/"
+        }
+    ],
     "headers": [
       {
         "source": "/api/(.*)",
